# kraken-web-api

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/kraken_web_api/: app.py  client.py  client_base.py  constants.py  enums.py  exceptions.py  handlers.py  subscribe_creator.py  websocket.py
src/kraken_web_api/helpers/: helpers.py
src/kraken_web_api/model/: api_parameters.py  channel.py  order_book.py  price.py  socket_connection.py  subscription.py  ticker.py
src/project/: app.py
tests/: test_app.py  test_handlers.py  test_websockets.py
