[metadata]
name = project
description = template python layout
author = Egor Chistyakov
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = 
    project
install_requires = 
    requests>=2.27
python_requires = 
    >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
project = py.typed

[flake8]
max-line-length = 160