[metadata]
name = kraken-web-api
description = Kraken web api
version = attr: kraken_web_api.__version__
author = Egor Chistyakov
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    kraken_web_api
install_requires = 
    websockets>=10.2
python_requires = 
    >=3.8
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=2.0
    flake8>=3.9
    tox>=3.24
    pytest-asyncio>=0.18.3

[options.package_data]
project = py.typed

[flake8]
max-line-length = 160